breytti litunum á undo og redo tökkunum

--- a/src/main/resources/lang/lang_en.properties
+++ b/src/main/resources/lang/lang_en.properties
@@ -5,3 +5,5 @@ button.greida=Pay
 button.hreinsa=Clear
 checkbox.darkmode=Dark mode
 textfield.prompt=Enter amount
+button.undo=Undo
+button.redo=Redo
