--- a/src/main/resources/lang/lang_is.properties
+++ b/src/main/resources/lang/lang_is.properties
@@ -5,3 +5,5 @@ button.greida=Greiða
 button.hreinsa=Hreinsa
 checkbox.darkmode=Dökkur hamur
 textfield.prompt=Sláðu inn fjölda
+button.undo=Afturkalla
+button.redo=Endurgera
