Breytti email beiðnum, takka og output í ensku fyrir ensku útgáfuna

--- a/src/main/resources/lang/lang_en.properties
+++ b/src/main/resources/lang/lang_en.properties
@@ -7,3 +7,8 @@ checkbox.darkmode=Dark mode
 textfield.prompt=Enter amount
 button.undo=Undo
 button.redo=Redo
+email.prompt=Your email
+email.send=Send receipt
+email.button=Receipt
+email.invalid=Email is invalid.
+email.sent=Receipt has been sent to
