--- a/src/main/resources/lang/lang_is.properties
+++ b/src/main/resources/lang/lang_is.properties
@@ -7,3 +7,8 @@ checkbox.darkmode=Dökkur hamur
 textfield.prompt=Sláðu inn fjölda
 button.undo=Afturkalla
 button.redo=Endurgera
+email.prompt=Netfang þitt
+email.send=Senda kvittun
+email.button=Kvittun
+email.invalid=Netfang er ógilt.
+email.sent=Kvittun hefur verið send á
